cluster/apps/default/rhel8-0/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhel8-0-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "true"
    hajimari.io/appName: RHEL8 Host-0
    hajimari.io/enable: "true"
    hajimari.io/icon: server
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: rhel8-0.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: rhel8-0-service
                port:
                  number: 9090
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - rhel8-0.${SECRET_DOMAIN}
      secretName: rhel8-0-tls
